--- a/index.html
+++ b/index.html
@@ -9,41 +9,62 @@
 </head>
 <body>
 	<h1>ANDDOS - status watcher</h1>
-	<p><a href="">reload</a></p>
+	<p><i id="status_title"></i> Monitor mode [<a href="">reload</a>]</p>
 	
+	<h3>Global state</h3>
+	
+	<table class="global_state">
+		<tr>
+			<th>Clients count</th>
+			<th>request count</th>
+			<th>notmod count</th>
+		</tr>
+		<tr>
+			<td>4</td>
+			<td>560</td>
+			<td>383</td>
+		</tr>
+	</table>
+
 	<div id="chart_overview"></div>
-	<table>
+	
+
+	<h3>Clients state</h3>
+	
+	<table class="clients_state">
 		<tr>
 			<th>ID</th>
 			<th>request count</th>
 			<th>notmod count</th>
-			<th>pass seq</th>
+			<th>pass seq<div class="chart_client"></div></th>
 		</tr>
 		<tr>
 			<td>4432</td>
 			<td>160</td>
 			<td>83</td>
-			<td>m"ncDzkjvd/uF"ge</td>
+			<td>m"ncDzkjvd/uF"ge<div class="chart_client"></div></td>
 		</tr>
 		<tr>
 			<td>4532</td>
 			<td>16</td>
 			<td>8</td>
-			<td>mDzkjvdge</td>
+			<td>mDzkjvdge<div class="chart_client"></div></td>
 		</tr>
 		<tr>
 			<td>6932</td>
 			<td>240</td>
 			<td>183</td>
-			<td>VMJFsDzkjdfe</td>
+			<td>VMJFsDzkjdfe<div class="chart_client"></div></td>
 		</tr>
 		<tr>
 			<td>9492</td>
 			<td>10</td>
 			<td>2</td>
-			<td>cDzkdfjvd/uF"ge</td>
+			<td>cDzkdfjvd/uF"ge<div class="chart_client"></div></td>
 		</tr>
 	</table>
+	
+	
 	
 </body>
 </html>
