--- a/index.html
+++ b/index.html
@@ -6,10 +6,15 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 	<script src="raphael-min.js"></script>
 	<script src="chart_script.js"></script>
+	<style>
+	body {
+		padding-left: 20px;
+	}
+	</style>
 </head>
 <body>
 	<h1>ANDDOS - status watcher</h1>
-	<p><i id="status_title"></i> Monitor mode [<a href="">reload</a>]</p>
+	<p><i id="status_title"></i> Monitor mode [<a href="">reload</a>]<span class="loaded"> Just loaded...</span></p>
 	
 	<h3>Global state</h3>
 	
@@ -34,33 +39,38 @@
 	<table class="clients_state">
 		<tr>
 			<th>ID</th>
-			<th>request count</th>
-			<th>notmod count</th>
-			<th>pass seq<div class="chart_client"></div></th>
+			<th class="data">request count</th>
+			<th class="data">notmod count</th>
+			<th>pass seq</th>
+			<th>charts</th>
 		</tr>
 		<tr>
 			<td>4432</td>
-			<td>160</td>
-			<td>83</td>
-			<td>m"ncDzkjvd/uF"ge<div class="chart_client"></div></td>
+			<td class="data">160</td>
+			<td class="data">83</td>
+			<td>m"ncDzkjvd/uF"ge</td>
+			<td class="chart_client"></td>
 		</tr>
 		<tr>
 			<td>4532</td>
-			<td>16</td>
-			<td>8</td>
-			<td>mDzkjvdge<div class="chart_client"></div></td>
+			<td class="data">16</td>
+			<td class="data">8</td>
+			<td>mDzkjvdge</td>
+			<td class="chart_client"></td>
 		</tr>
 		<tr>
 			<td>6932</td>
-			<td>240</td>
-			<td>183</td>
-			<td>VMJFsDzkjdfe<div class="chart_client"></div></td>
+			<td class="data">240</td>
+			<td class="data">183</td>
+			<td>VMJFsDzkjdfe</td>
+			<td class="chart_client"></td>
 		</tr>
 		<tr>
 			<td>9492</td>
-			<td>10</td>
-			<td>2</td>
-			<td>cDzkdfjvd/uF"ge<div class="chart_client"></div></td>
+			<td class="data">10</td>
+			<td class="data">2</td>
+			<td>cDzkdfjvd/uF"ge</td>
+			<td class="chart_client"></td>
 		</tr>
 	</table>
 	
